compiler/tests/compiler/must_fail/t_19.mil.exp.err
Parsing tests/compiler/must_fail/t_19.mil as MIL

tests/compiler/must_fail/t_19.mil:9:7: 9:8 error: wrong storage type for call of bar: got ``stack'', expected ``reg''
  bar(x);
      ^^
