compiler/tests/compiler/must_fail/t_19.mil
/* function call with wrong argument type */

fn bar(_x : reg u64) {
}

fn foo() {
  x : stack u64;
  x = 42;
  bar(x);
}

/*
START:CMD
ARG="typecheck"
END:CMD
*/
